<resources>
    <string name="app_name">novel-v2</string>
    <string name="api_key">UQbsSnQdGWEfds5HNTTt3aY9X</string>
    <string name="api_key_secret">uzkFPzl9mqsQQPXjYuvwOyDd1BwmDvuaKN8Q9VcXzNAuOTNQAM</string>
    <string name="bearer_token">AAAAAAAAAAAAAAAAAAAAAA3AcgEAAAAAChPORJA2LZs9DfvhUEFfmpdrnLw%3D40yTYNJZl7qacj9DGNRcMRkB4eH2ELuUHozG5BhhippT9O0Scd</string>
    <string name="access_token">1397204864770482177-5gzCpaf6WlDukVI9PkMlp85qQu2fUX</string>
    <string name="access_token_secret">TLTksalrDCwWgTtqCvRsLpgtY9uN50xwqBN7Rh0cipNaA</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_search">Search</string>
    <string name="hint_novel_text">What\'s new?</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_apply">Apply</string>
    <string name="button_signout">Sign Out</string>

    <string name="text_signup">No account? You can sign up here</string>
    <string name="text_login">Have an account? You can log in here</string>
    <string name="desc_floating_action_btn">Compose a new Novel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_activity_title">My Activity</string>
    <string name="home_title">Home</string>
</resources>