<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/grid_2x"
                android:layout_marginTop="@dimen/grid_2x"
                android:layout_marginEnd="@dimen/grid_2x"
                android:layout_marginBottom="@dimen/grid_2x"
                android:src="@drawable/novel_login_banner" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInputLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:textColorHint="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/usernameTextInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailPasswordInputLayout"
                android:layout_width="@dimen/standard_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTextInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/accent" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSignup"
                style="@style/StandardButton"
                android:layout_width="@dimen/standard_width"
                android:layout_height="@dimen/standard_height"
                android:layout_below="@+id/emailPasswordInputLayout"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:text="@string/button_signup"
                android:onClick="onSignup"/>

            <TextView
                android:id="@+id/signupTextView"
                style="@style/StandardLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonSignup"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/grid_2x"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/text_login"
                android:onClick="goToLogin"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/signupProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLight"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>